Revision history for JSON-Schema-Draft201909

{{$NEXT}}
          - add support for $recursiveAnchor and $recursiveRef

0.003     2020-05-31 20:10:02Z
          - add infinite recursion detection
          - process properties in sorted order, for consistent ordering of
            results
          - mark a numeric comparison test as TODO on 32-bit machines (see
            GHI #10)

0.002     2020-05-27 22:28:15Z
          - fix incorrect prereq needed for tests
          - add support for $id and $anchor in single schema documents

0.001     2020-05-21 15:51:00Z
          - Initial release.