@@ -2,6 +2,8 @@ Revision history for JSON-Schema-Draft201909
 
 {{$NEXT}}
           - add support for $recursiveAnchor and $recursiveRef
+          - support use of "$ref":"https://json-schema.org/draft/2019-09/schema"
+            by loading common metaschemas from a local cache
 
 0.003     2020-05-31 20:10:02Z
           - add infinite recursion detection
